# NumericalAlgorithms

./: README.md
1_power_series/: readme.md
1_power_series/src/: main.cpp
2_generic_gauss_algorithm/: readme.md  zad2netframework.sln
2_generic_gauss_algorithm/project/zad2netframework/: Program.cs  zad2netframework.csproj
2_generic_gauss_algorithm/zad2netframework/: EfficiencyTest.cs  Fraction.cs  InitialTest.cs  MyMatrix.cs
2_generic_gauss_algorithm/zad2netframework/Properties/: AssemblyInfo.cs
3_population_protocols/project/: CMakeLists.txt
3_population_protocols/project/src/: EigenFiller.h  EigenGauss.h  EigenJacobi.h  EigenMultiplication.h  EigenSeidel.h  GenericFiller.h  GenericGauss.h  GenericJacobi.h  GenericMultiplication.h  GenericSeidel.h  Main.cpp  Main.h  Matrix.h  MonteCarlo.h  MySparseMatrix.h  TestA.h  TestB.h  TestC.h  TestD.h  TestE.h
4_approximation/project/: CMakeLists.txt
4_approximation/project/include/: ArrayMatrix.h  BaseMatrix.h  Controller.h  EigenMatrix.h  Main.h  VectorMapMatrix.h
4_approximation/project/src/: ArrayMatrix.cpp  BaseMatrix.cpp  Controller.cpp  EigenMatrix.cpp  Main.cpp  VectorMapMatrix.cpp
